apps/gateway-api/envs/gke-prod-01/networkpolicy.yml
---
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: egress-whitelist-l7
  namespace: gateway-api
spec:
  targetRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: shared-waypoint-egress
  action: ALLOW
  rules:
  - from:
    - source:
        namespaces: ["demo-bookinfo"] 
  - to:
    - operation:
        hosts: ["www.google.com"]
        paths: ["*"]
        methods: ["GET"]

  # - from:
  #   - source:
  #       notNamespaces: ["demo-bookinfo"]
